@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-03T16:18:02Z",
-  "count_outdated" : 2848,
-  "uniques_outdated" : 549,
+  "timestamp" : "2024-02-04T01:08:43Z",
+  "count_outdated" : 2862,
+  "uniques_outdated" : 551,
   "count" : 3044,
   "uniques" : 571,
   "views" : [
-    {
-      "timestamp": "2024-01-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 14 ],
-      "count_decinc": [ 12, 14 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-01-21T00:00:00Z",
       "count": 6,
